# terraform-plan-analyzer

./: .gitignore  README.md  devbox.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
examples/: analyze_example.py  example_plan_with_errors.txt
src/: agent.py  cli.py  models.py
src/error_detector/: detector.py
src/formatter/: response_formatter.py
src/parser/: plan_parser.py
src/recommender/: engine.py
test/: test_agent.py
