[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terraform-plan-analyzer"
version = "0.1.0"
description = "An agent for analyzing Terraform plan outputs and providing helpful recommendations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0.0",
    "regex>=2022.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]